--- a/Proyecto_PD/platformio.ini
+++ b/Proyecto_PD/platformio.ini
@@ -14,7 +14,13 @@ board = esp32dev
 framework = arduino
 lib_deps = 
 	fastled/FastLED@^3.6.0
-	ottowinter/ESPAsyncWebServer-esphome@^3.1.0
+	esphome/ESPAsyncWebServer-esphome@^3.2.0
+	me-no-dev/ESP Async WebServer@^1.2.3
+	khoih-prog/WebServer_WT32_ETH01@^1.5.1
+	LittleFS
+	WebServer
 	adafruit/Adafruit NeoPixel@^1.12.2
 board_build.partitions = min_spiffs.csv
-
+monitor_speed = 115200
+upload_port = COM7
+monitor_port = COM7
